# fastapi2

./: .env  Dockerfile  app.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: models.py
app/migrations/: env.py
app/routes/: category_routes.py  deps.py  poc.py  product_routes.py  user_routes.py
app/schemas/: category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
app/test/schemas/: test_product_schema.py  test_user_schemas.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
migrations/versions/: 6d24043b140e_add_user_table.py  722ae0381cde_add.py  98cb6ce03764_add_categories_table.py
